            per the specification
          - support custom format definitions that operate on more than one
            core data type
          - fixed handling of unrecognized formats in draft2020-12 and later
            (but only when the FormatAssertion vocabulary is explicitly
            requested, not with validate_formats=1)

0.578     2023-12-29 23:13:44Z
          - remove use of JSON::MaybeXS, to avoid potential use of JSON::XS;
            now we use Cpanel::JSON::XS or JSON::PP directly, using the same
            environment variables as in Mojo::JSON for customization.
          - new helper interface, get_document()

0.577     2023-12-19 05:27:04Z
          - new attribute on Error and Result objects: "recommended_response",
            for use when validating HTTP requests

0.576     2023-12-10 06:10:57Z
          - the "stringy_numbers" feature now also applies to the "enum",
            "const", and "uniqueItems" keywords

0.575     2023-11-26 05:11:10Z
          - properly handle some edge cases where the "$schema" keyword can
            change the dialect to a different specification version with
            different Core vocabulary keywords
          - evaluation at non-schema locations is now prohibited

0.574     2023-11-13 00:50:55Z
          - better detection of schema locations, for use by Document
            subclasses
          - fixed vocabulary ordering (from v0.567)
          - properly handle "$dynamicRef", "$recursiveRef" and "$schema"
            referencing a boolean schema
          - bundled metaschemas have been updated to their latest versions
            from https://json-schema.org

0.573     2023-10-21 23:49:03Z
          - fix construction of default values of some attributes e.g.
            media_types, encodings
          - fix list context of has_errors, error_count, annotation_count
            methods

0.572     2023-10-14 22:04:52Z
          - boost runtime performance by removing uses of MooX::HandlesVia
